# DMP

./: CMakeLists.txt  CMakeLists.txt~  README.md
DMP/: behavior.py  csdmp_behavior.py  dmp_behavior.py
DMP/examples/: cart_dmp_config.yaml  cart_dmp_config.yaml~  cart_dmp_model.yaml  csdmp_exp.py  dmp_exp.py
DMP/test/: dmp_model.yaml~  test_csdmp.py  test_dmp.py
implementation/: CMakeLists.txt
implementation/dmp/: benchmark.py  dmp.pyx~  dmp_declarations.pxd~
implementation/dmp/test/: test_dmp.py
implementation/src/: CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  DMP.cpp  DMP.h
include/: Behavior.h  LoadableBehavior.h
src/representation/dmp/implementation/dmp/: CMakeLists.txt~  dmp.cpp  setup.py  setup.py~
src/representation/dmp/implementation/dmp/test/: benchmark.py  test_dmp.py
src/representation/dmp/implementation/src/: DMP.cpp  Makefile  cmake_install.cmake
src/representation/dmp/src/: DMPConfig.cpp  DMPConfig.h  DMPConfig.h~  DMPModel.cpp  DMPModel.h
test/: CMakeLists.txt~  config.yaml  import_export_test_config.yml  test_dmp_config.cpp  test_dmp_model.cpp  test_helpers.h
